--- a/suk.html
+++ b/suk.html
@@ -126,7 +126,7 @@
         <div class="menu">
             <a href="https://lookerstudio.google.com/reporting/ab5881ca-3bf5-49c5-9af9-748d00b66dad" target="_blank">Commercial Revenue BI Dashboard</a>
             <a href="https://lookerstudio.google.com/reporting/80622fbd-98b8-48f0-8af1-982f849a8639" target="_blank">Stations Infrastructure Info</a>
-            <a href="#">Operation Dashboard</a>
+            <a href="https://lookerstudio.google.com/u/0/reporting/5c534a43-0aa9-4acd-86c6-5c2a4be64e68/page/p_w85i0yalzd" target="_blank">Operation Dashboard</a>
             <a href="#">Land Revenue Dashboard</a>
         </div>
     </div>
