--- a/suk.html
+++ b/suk.html
@@ -73,15 +73,22 @@
 
     /* Bottom Footer */
     .footer {
-        background-color: #9e9e9e; /* Gray */
-        color: white;
-        text-align: center;
-        padding: 15px 0;
-        font-size: 14px;
-        position: fixed;
-        width: 100%;
-        bottom: 0;
-    }
+    background-color: #9e9e9e;
+    color: white;
+    text-align: center;
+    padding: 12px 0;
+    font-size: 14px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    line-height: 1.5;
+}
+
+.footer-sub {
+    font-size: 13px;
+    opacity: 0.9;
+}
+
 
     /* Responsive adjustments */
     @media screen and (max-width: 600px) {
@@ -131,10 +138,12 @@
         </div>
     </div>
 
-    <!-- Bottom Footer -->
-    <div class="footer">
-        A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)
-    </div>
+   <!-- Bottom Footer -->
+<div class="footer">
+    <div>A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)</div>
+    <div class="footer-sub">Developed & Powered by: IT Dept: / SUK</div>
+</div>
+
 
 </body>
 </html>
