--- a/suk.html
+++ b/suk.html
@@ -4,75 +4,78 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pakistan Railways Sukkur Division</title>
+
 <style>
-    /* Reset and basic styles */
-    body, html {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        height: 100%;
-    }
+/* ===== RESET ===== */
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    height: 100%;
+}
 
-    /* Top Panel with logos */
-    .top-panel {
-        background-color: #2e7d32; /* Green */
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px 20px;
-    }
+/* ===== LOCK PAGE BEFORE LOGIN ===== */
+body.locked {
+    overflow: hidden;
+}
+body.locked .page-content {
+    filter: blur(6px);
+    pointer-events: none;
+}
 
-    .top-panel img {
-        height: 50px; /* Adjust logo height */
-        width: auto;
-    }
+/* ===== TOP PANEL ===== */
+.top-panel {
+    background-color: #2e7d32;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+.top-panel img {
+    height: 50px;
+}
+.top-panel h1 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    flex-grow: 1;
+}
 
-    .top-panel h1 {
-        margin: 0;
-        font-size: 24px;
-        font-weight: bold;
-        text-align: center;
-        flex-grow: 1;
-    }
+/* ===== CENTER MENU ===== */
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 140px);
+    padding: 20px;
+}
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    max-width: 400px;
+}
+.menu a {
+    text-decoration: none;
+    color: #2e7d32;
+    background-color: #e8f5e9;
+    padding: 15px 25px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    transition: 0.3s;
+}
+.menu a:hover {
+    background-color: #add8e6;
+    color: white;
+    transform: scale(1.05);
+}
 
-    /* Center container */
-    .center-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: calc(100vh - 140px); /* Adjust for top + bottom panel */
-        padding: 20px;
-    }
-
-    /* Vertical Menu */
-    .menu {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        width: 100%;
-        max-width: 400px;
-    }
-
-    .menu a {
-        text-decoration: none;
-        color: #2e7d32;           /* Default green text */
-        background-color: #e8f5e9; /* Light green background */
-        padding: 15px 25px;
-        border-radius: 8px;
-        text-align: center;
-        font-size: 18px;
-        transition: all 0.3s ease; /* Smooth hover effect */
-    }
-
-    .menu a:hover {
-        background-color: #add8e6; /* Light blue */
-        color: white;
-        transform: scale(1.05);    /* Slight zoom */
-    }
-
-    /* Bottom Footer */
-    .footer {
+/* ===== FOOTER ===== */
+.footer {
     background-color: #9e9e9e;
     color: white;
     text-align: center;
@@ -90,45 +93,103 @@
 }
 
 
-    /* Responsive adjustments */
-    @media screen and (max-width: 600px) {
-        .center-container {
-            height: auto;
-            padding: 20px 10px;
-        }
+/* ===== LOGIN MODAL ===== */
+.login-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
 
-        .menu a {
-            font-size: 16px;
-            padding: 12px 20px;
-        }
+.login-box {
+    background: white;
+    padding: 30px;
+    width: 300px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        .top-panel h1 {
-            font-size: 18px;
-        }
+.login-box h2 {
+    margin-bottom: 15px;
+    color: #2e7d32;
+}
 
-        .top-panel img {
-            height: 40px;
-        }
+.login-box input,
+.login-box button {
+    width: 220px;          /* SAME SIZE */
+    padding: 10px;
+    margin: 8px 0;
+    text-align: center;
+    font-size: 15px;
+}
 
-        .footer {
-            font-size: 12px;
-            padding: 10px 0;
-        }
+.login-box input {
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+.login-box button {
+    background: #2e7d32;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.login-box button:hover {
+    background: #1b5e20;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+    display: none;
+    margin-top: 5px;
+}
+
+/* ===== RESPONSIVE ===== */
+@media screen and (max-width: 600px) {
+    .top-panel h1 {
+        font-size: 18px;
     }
-
+    .top-panel img {
+        height: 40px;
+    }
+    .menu a {
+        font-size: 16px;
+    }
+}
 </style>
 </head>
-<body>
 
-    <!-- Top Panel with Logos -->
+<body class="locked">
+
+<!-- ===== LOGIN POPUP ===== -->
+<div class="login-overlay" id="loginOverlay">
+    <div class="login-box">
+        <h2>Login Required</h2>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button onclick="checkLogin()">Login</button>
+        <div class="error" id="errorMsg">Invalid username or password</div>
+    </div>
+</div>
+
+<!-- ===== PAGE CONTENT ===== -->
+<div class="page-content">
+
     <div class="top-panel">
-          <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
-
+        <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
         <h1>Pakistan Railways Sukkur Division</h1>
-    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
+        <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
     </div>
 
-    <!-- Center Vertical Menu -->
     <div class="center-container">
         <div class="menu">
             <a href="https://lookerstudio.google.com/reporting/ab5881ca-3bf5-49c5-9af9-748d00b66dad" target="_blank">Commercial Revenue BI Dashboard</a>
@@ -138,12 +199,29 @@
         </div>
     </div>
 
-   <!-- Bottom Footer -->
+    <!-- Bottom Footer -->
 <div class="footer">
     <div>A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)</div>
-    <div class="footer-sub">Developed & Powered by: IT Dept: / SUK</div>
+    <div class="footer-sub">Developed & Powered by: IT Branch/SUK</div>
 </div>
 
+
+</div>
+
+<!-- ===== LOGIN SCRIPT ===== -->
+<script>
+function checkLogin() {
+    const u = document.getElementById("username").value.trim();
+    const p = document.getElementById("password").value.trim();
+
+    if (u === "admin" && p === "admin") {
+        document.getElementById("loginOverlay").style.display = "none";
+        document.body.classList.remove("locked");
+    } else {
+        document.getElementById("errorMsg").style.display = "block";
+    }
+}
+</script>
 
 </body>
 </html>
