--- a/suk.html
+++ b/suk.html
@@ -201,9 +201,16 @@ body.locked .page-content {
 
     <!-- Bottom Footer -->
 <div class="footer">
-    <div>A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)</div>
-    <div class="footer-sub">Developed & Powered by: IT Branch/SUK</div>
+    <a href="https://pakrail.online" target="_blank" class="footer-link">
+        pakrail.online
+    </a>
+
+    <div class="footer-center">
+        <div>A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)</div>
+        <div class="footer-sub">Developed & Powered by: IT Branch / SUK</div>
+    </div>
 </div>
+
 
 
 </div>
