--- a/suk.html
+++ b/suk.html
@@ -92,6 +92,10 @@ body.locked .page-content {
     opacity: 0.9;
 }
 
+.footer-highlight {
+    color: #b3e5fc;      /* Light Blue */
+    font-weight: bold;
+}
 
 /* ===== LOGIN MODAL ===== */
 .login-overlay {
@@ -206,7 +210,11 @@ body.locked .page-content {
     </a>
 
     <div class="footer-center">
-        <div>A Digital & BI Transformation Initiative by: Hon. Jamshaid Alam (Divisional Superintendent)</div>
+        <div>
+    A Digital & BI Transformation Initiative by:
+    <span class="footer-highlight">Hon. Jamshaid Alam</span>
+    (Divisional Superintendent)
+</div>
         <div class="footer-sub">Developed & Powered by: IT Branch / SUK</div>
     </div>
 </div>
