--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pakistan Railways – Sukkur Division</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
 /* ================= HEADER ================= */
@@ -361,10 +362,21 @@ function toggleMenu() {
     </div>
 
     <!-- RIGHT : FOOTER TEXT -->
-    <div style="text-align:right;">
-      <div>Pakistan Railways Sukkur Division</div>
-      <div>Developed &amp; Powered by IT Dept: Sukkur Division</div>
-    </div>
+   <!-- RIGHT : FOOTER TEXT -->
+<div style="text-align:right;">
+
+  <!-- Facebook Link -->
+  <div style="margin-bottom:6px;">
+    <a href="https://facebook.com/dssukkur1" target="_blank" style="color:#1877f2; font-size:18px; text-decoration:none;">
+      <i class="fab fa-facebook"></i> Follow us on Facebook
+    </a>
+  </div>
+
+  <div>Pakistan Railways Sukkur Division</div>
+  <div>Developed &amp; Powered by IT Dept: Sukkur Division</div>
+
+</div>
+
 
   </div>
 </footer>
