--- a/ticketing.html
+++ b/ticketing.html
@@ -184,11 +184,7 @@ th {
     Pakistan Railways, Sukkur Division</p>
   </div>
 
-  <div class="text-section">
-    <p>The Sukkur Division operates <strong>27 POS stations</strong> providing 24/7 ticketing services.</p>
-    <p>Passengers can reserve tickets via the <strong>RABTA mobile app</strong> and the official website.</p>
-  </div>
-</div>
+ <div class="text-section"> The Sukkur Division operates <strong>27 POS stations</strong>, providing <strong>24/7 ticketing and reservation services</strong>. Ticket Vending Machines (TVMs) are installed at <strong>Rohri and Rahimyar Khan</strong>, offering convenient reservation options. <p>All main line stations, as well as major branch line stations, are equipped for <strong>computerized ticketing</strong>, and work is underway to extend this facility to the remaining branch line stations.</p> <p>Passengers can also make reservations through the <strong>RABTA mobile app</strong> and the <strong>Pakistan Railways website</strong>, ensuring flexibility and convenience.</p> <p> A dedicated <strong>IT server room</strong> at the Sukkur Reservation Office is staffed by IT personnel from <strong>8:00 AM to midnight</strong>, providing technical support for mobile and website users, as well as assisting remote stations with troubleshooting and ticketing issues.</p> </div></div>
 
 <!-- ================= MODAL ================= -->
 <div id="seatModal" class="modal">
